prototypes/octopi/ytt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopi
spec:
  selector:
    app: octopi
  ports:
  - port: 80
    targetPort: 80
